--- a/public/recipes/rec1.html
+++ b/public/recipes/rec1.html
@@ -34,24 +34,11 @@
         </div>
         <div class="ing">  <!-- ingredients list, i.e 200g cheese -->
             <h2 id="sub1">Ingredients:</h2>
-            <p id="ing">1 lb ground beef
-                1 packet taco seasoning
-                1/2 cup water
-                12 hard taco shells
-                1 cup shredded cheddar cheese
-                Toppings: lettuce, tomato, sour cream, salsa, etc.
-            </p>
+            <p id="ing">ingredientssss</p>
         </div>
         <div class="instructs"> <!--  cooking instructions, i.e oven under 80c for 20 minutes / chop carrots until ... -->
             <h2 id="sub2">Preparations and Instructions:</h2>
-            <p id="inst">Preheat your oven to 375°F (190°C).
-                Brown the ground beef in a pan over medium heat. Drain any excess fat.
-                Stir in taco seasoning and water. Simmer for 5 minutes until thickened.
-                Arrange taco shells in a baking dish. Spoon the beef mixture into each shell.
-                Sprinkle cheese over the beef-filled shells.
-                Bake for 10-12 minutes until cheese is melted and shells are crispy.
-                Add your favorite toppings and serve hot.
-            </p>
+            <p id="inst">instructionssss</p>
         </div>
         <img src="../../node/node_files/uploads/${image}" id="img" alt="Recipe Image">
     </div>
