--- a/public/html/admin_home.html
+++ b/public/html/admin_home.html
@@ -50,7 +50,7 @@
                 </a>
             </li>
             <li class="card">
-                <a href="edit.html"> <!-- Redirect to editing page -->
+                <a href="/edit-recipe"> <!-- Redirect to editing page -->
                     <img src="../assets/shawarma.jpg" class="card__image" alt="Shawarma">
                     <div class="card__overlay">
                         <div class="card__header">
