--- a/public/recipes/rec4.html
+++ b/public/recipes/rec4.html
@@ -4,7 +4,7 @@
             <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>asd</title>
+                <title>Chicken Nuggets</title>
                 <link rel="stylesheet" href="rec.css">
             </head>
             <body>
@@ -22,68 +22,23 @@
                 </div>
                 <div class="page">
                     <div class="recipe-info">
-                        <h1 id="recipe-title">asd</h1> <!--  food name/type -->
-                        <p id="recipe-description">asd</p> <!-- description -->
+                        <h1 id="recipe-title">Chicken Nuggets</h1> <!--  food name/type -->
+                        <p id="recipe-description">asdasd</p> <!-- description -->
                         <br><br>
                         <h2>Category:</h2> <!-- i.e cooking time, prep time  -->
-                        <p id="category">asd</p>
+                        <p id="category">MCD</p>
                         <h2>Duration:</h2>
-                        <p id="recipe-duration">asd</p> <!-- details to be entered here -->
+                        <p id="recipe-duration">2 seconds</p> <!-- details to be entered here -->
                     </div>
                     <div class="ing">  <!-- ingredients list, i.e 200g cheese -->
                         <h2 id="sub1">Ingredients:</h2>
-                        <p id="ing">a</p>
-                    </div>
-                    <div class="instructs"> <!--  cooking instructions, i.e oven under 80c for 20 minutes / chop carrots until ... -->
-                        <h2 id="sub2">Preparations and Instructions:</h2>
-                        <p id="inst">a</p>
-                    </div>
-                    <img src="../../node/node_files/uploads/1718976844657-63ebbf27a0b9236eda463a9a36e95afa.jpg" id="img" alt="Recipe Image">
-                </div>
-
-            </body>
-            </html>
-            
-            <!DOCTYPE html>
-            <html lang="en">
-            <head>
-                <meta charset="UTF-8">
-                <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Abdur</title>
-                <link rel="stylesheet" href="rec.css">
-            </head>
-            <body>
-                <div class="entire">    
-                    <div class="navbar">
-                        <nav>    
-                            <ul>
-                                <li><a href="/admin_home">Admin</a></li>
-                                <li><a href="/">Home</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </nav>
-                        <img src="../assets/logo2.png"/>
-                    </div>
-                </div>
-                <div class="page">
-                    <div class="recipe-info">
-                        <h1 id="recipe-title">Abdur</h1> <!--  food name/type -->
-                        <p id="recipe-description">a</p> <!-- description -->
-                        <br><br>
-                        <h2>Category:</h2> <!-- i.e cooking time, prep time  -->
-                        <p id="category">a</p>
-                        <h2>Duration:</h2>
-                        <p id="recipe-duration">a</p> <!-- details to be entered here -->
-                    </div>
-                    <div class="ing">  <!-- ingredients list, i.e 200g cheese -->
-                        <h2 id="sub1">Ingredients:</h2>
-                        <p id="ing">asd</p>
+                        <p id="ing">ad</p>
                     </div>
                     <div class="instructs"> <!--  cooking instructions, i.e oven under 80c for 20 minutes / chop carrots until ... -->
                         <h2 id="sub2">Preparations and Instructions:</h2>
                         <p id="inst">asd</p>
                     </div>
-                    <img src="../../node/node_files/uploads/1718980319356-70b60b91-a863-422e-b419-0a275630c804.png" id="img" alt="Recipe Image">
+                    <img src="../../node/node_files/uploads/1718989591729-bannerbetter.png" id="img" alt="Recipe Image">
                 </div>
 
             </body>
