--- a/public/recipes/rec2.html
+++ b/public/recipes/rec2.html
@@ -1,61 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>${name}</title>
-    <link rel="stylesheet" href="rec.css">
-</head>
-<body>
-    <div class="entire">    
-        <div class="navbar">
-            <nav>    
-                <ul>
-                    <li><a href="/admin_home">Admin</a></li>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-            <img src="../assets/logo2.png"/>
-        </div>
-    </div>
-    <div class="page">
-        <div class="recipe-info">
-            <h1 id="recipe-title">Spaghetti Carbonara</h1> <!--  food name/type -->
-            <p id="recipe-description">A traditional Italian dish featuring al dente spaghetti tossed in a rich and creamy sauce made from eggs and Parmesan cheese.
-                Infused with the smoky flavor of crispy pancetta, and seasoned with freshly ground black pepper, this pasta dish is both simple and indulgent.
-                Finished with a sprinkling of extra cheese and a touch of parsley, our Spaghetti Carbonara offers a perfect blend of savory and creamy notes that
-                will delight your taste buds and leave you craving more.</p> <!-- description -->
-            <br><br>
-            <h2>Category:</h2> <!-- i.e cooking time, prep time  -->
-            <p id="category">Pasta</p>
-            <h2>Duration:</h2>
-            <p id="recipe-duration">30 Minutes</p> <!-- details to be entered here -->
-        </div>
-        <div class="ing">  <!-- ingredients list, i.e 200g cheese -->
-            <h2 id="sub1">Ingredients:</h2>
-            <p id="ing">200g spaghetti
-                100g pancetta
-                2 large eggs
-                50g pecorino cheese
-                50g parmesan
-                2 plump garlic cloves - peeled and left whole
-            </p>
-        </div>
-        <div class="instructs"> <!--  cooking instructions, i.e oven under 80c for 20 minutes / chop carrots until ... -->
-            <h2 id="sub2">Preparations and Instructions:</h2>
-            <p id="inst">Preheat your oven to 375°F (190°C).
-                Brown the ground beef in a pan over medium heat. Drain any excess fat.
-                Stir in taco seasoning and water. Simmer for 5 minutes until thickened.
-                Arrange taco shells in a baking dish. Spoon the beef mixture into each shell.
-                Sprinkle cheese over the beef-filled shells.
-                Bake for 10-12 minutes until cheese is melted and shells are crispy.
-                Add your favorite toppings and serve hot.
-            </p>
-        </div>
-        <img src="../../node/node_files/uploads/${image}" id="img" alt="Recipe Image">
-    </div>
 
-</body>
-</html>
-`;
+            <!DOCTYPE html>
+            <html lang="en">
+            <head>
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <title>u suck</title>
+                <link rel="stylesheet" href="rec.css">
+            </head>
+            <body>
+                <div class="entire">    
+                    <div class="navbar">
+                        <nav>    
+                            <ul>
+                                <li><a href="/admin_home">Admin</a></li>
+                                <li><a href="/">Home</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                        </nav>
+                        <img src="../assets/logo2.png"/>
+                    </div>
+                </div>
+                <div class="page">
+                    <div class="recipe-info">
+                        <h1 id="recipe-title">u suck</h1> <!--  food name/type -->
+                        <p id="recipe-description">213we</p> <!-- description -->
+                        <br><br>
+                        <h2>Category:</h2> <!-- i.e cooking time, prep time  -->
+                        <p id="category">21</p>
+                        <h2>Duration:</h2>
+                        <p id="recipe-duration">123</p> <!-- details to be entered here -->
+                    </div>
+                    <div class="ing">  <!-- ingredients list, i.e 200g cheese -->
+                        <h2 id="sub1">Ingredients:</h2>
+                        <p id="ing">a</p>
+                    </div>
+                    <div class="instructs"> <!--  cooking instructions, i.e oven under 80c for 20 minutes / chop carrots until ... -->
+                        <h2 id="sub2">Preparations and Instructions:</h2>
+                        <p id="inst">a</p>
+                    </div>
+                    <img src="../../node/node_files/uploads/1718992453927-bitcoin.png" id="img" alt="Recipe Image">
+                </div>
+
+            </body>
+            </html>
+            
