--- a/public/recipes/rec3.html
+++ b/public/recipes/rec3.html
@@ -1,61 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>${name}</title>
-    <link rel="stylesheet" href="rec.css">
-</head>
-<body>
-    <div class="entire">    
-        <div class="navbar">
-            <nav>    
-                <ul>
-                    <li><a href="/admin_home">Admin</a></li>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-            <img src="../assets/logo2.png"/>
-        </div>
-    </div>
-    <div class="page">
-        <div class="recipe-info">
-            <h1 id="recipe-title">Baked Tacos</h1> <!--  food name/type -->
-            <p id="recipe-description">Crispy oven-baked Tacos — Made with crunchy hard taco shells filled with perfectly seasoned ground beef and a blend of taco seasoning.
-                Topped with a generous layer of melted cheese, fresh pico de gallo, a dollop of creamy sour cream, and slices of ripe avocado. These tacos
-                offer a delightful combination of textures and flavors that will elevate your taco night to a whole new level. Enjoy a satisfying and delicious
-                meal that's easy to prepare and guaranteed to impress your family and friends.</p> <!-- description -->
-            <br><br>
-            <h2>Category:</h2> <!-- i.e cooking time, prep time  -->
-            <p id="category">Pasta</p>
-            <h2>Duration:</h2>
-            <p id="recipe-duration">10 Minutes</p> <!-- details to be entered here -->
-        </div>
-        <div class="ing">  <!-- ingredients list, i.e 200g cheese -->
-            <h2 id="sub1">Ingredients:</h2>
-            <p id="ing">1 lb ground beef
-                1 packet taco seasoning
-                1/2 cup water
-                12 hard taco shells
-                1 cup shredded cheddar cheese
-                Toppings: lettuce, tomato, sour cream, salsa, etc.
-            </p>
-        </div>
-        <div class="instructs"> <!--  cooking instructions, i.e oven under 80c for 20 minutes / chop carrots until ... -->
-            <h2 id="sub2">Preparations and Instructions:</h2>
-            <p id="inst">Preheat your oven to 375°F (190°C).
-                Brown the ground beef in a pan over medium heat. Drain any excess fat.
-                Stir in taco seasoning and water. Simmer for 5 minutes until thickened.
-                Arrange taco shells in a baking dish. Spoon the beef mixture into each shell.
-                Sprinkle cheese over the beef-filled shells.
-                Bake for 10-12 minutes until cheese is melted and shells are crispy.
-                Add your favorite toppings and serve hot.
-            </p>
-        </div>
-        <img src="../../node/node_files/uploads/${image}" id="img" alt="Recipe Image">
-    </div>
 
-</body>
-</html>
-`;
+            <!DOCTYPE html>
+            <html lang="en">
+            <head>
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <title>razzka</title>
+                <link rel="stylesheet" href="rec.css">
+            </head>
+            <body>
+                <div class="entire">    
+                    <div class="navbar">
+                        <nav>    
+                            <ul>
+                                <li><a href="/admin_home">Admin</a></li>
+                                <li><a href="/">Home</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                        </nav>
+                        <img src="../assets/logo2.png"/>
+                    </div>
+                </div>
+                <div class="page">
+                    <div class="recipe-info">
+                        <h1 id="recipe-title">razzka</h1> <!--  food name/type -->
+                        <p id="recipe-description">asd123</p> <!-- description -->
+                        <br><br>
+                        <h2>Category:</h2> <!-- i.e cooking time, prep time  -->
+                        <p id="category">asd123</p>
+                        <h2>Duration:</h2>
+                        <p id="recipe-duration">asdas123d</p> <!-- details to be entered here -->
+                    </div>
+                    <div class="ing">  <!-- ingredients list, i.e 200g cheese -->
+                        <h2 id="sub1">Ingredients:</h2>
+                        <p id="ing">asda</p>
+                    </div>
+                    <div class="instructs"> <!--  cooking instructions, i.e oven under 80c for 20 minutes / chop carrots until ... -->
+                        <h2 id="sub2">Preparations and Instructions:</h2>
+                        <p id="inst">asd</p>
+                    </div>
+                    <img src="../../node/node_files/uploads/1718992541795-asdasd.png" id="img" alt="Recipe Image">
+                </div>
+
+            </body>
+            </html>
+            
