--- a/public/html/admin_home.html
+++ b/public/html/admin_home.html
@@ -24,7 +24,7 @@
             <img src="../assets/recipe2.png" alt="Recipe Image">
         </div>
         <div class="text">
-            <h1>abdur,<br> ur so :duckbun:</h1>
+            <h1>Welcome<br> to Admin home</h1>
             <div class = "under">
                 <h3>The place to manage your recipes.</h3>
                 <div class = "paragraph">
@@ -50,7 +50,7 @@
                 </a>
             </li>
             <li class="card">
-                <a href="/edit-recipe"> <!-- Redirect to editing page -->
+                <a href="edit.html"> <!-- Redirect to editing page -->
                     <img src="../assets/shawarma.jpg" class="card__image" alt="Shawarma">
                     <div class="card__overlay">
                         <div class="card__header">
