--- a/public/html/Contact.html
+++ b/public/html/Contact.html
@@ -7,17 +7,18 @@
     <link rel="stylesheet" href="../css/contact.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="About_Us.html">About Us</a></li>
-                <li><a href="login.html">Login</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="contact-section">
+    <div class="entire">    
+        <div class="navbar">
+            <nav>    
+                <ul>
+                    <li><a href="/admin_home">Admin</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about_us">About Us</a></li>
+                </ul>
+            </nav>
+            <img src="../assets/logo2.png"/>
+        </div>
+        <div class="contact-section">
             <h1>Contact Us</h1>
             <p>If you have any questions, feel free to reach out to us. We are here to help!</p>
             <form action="mailto:razzka.abdur.jordan.raina@gmail.com" method="post" enctype="text/plain">
@@ -35,7 +36,9 @@
                 </div>
                 <button type="submit">Send Message</button>
             </form>
-        </section>
-    </main>
+        </div>  
+    </div>
+
+   
 </body>
 </html>
