--- a/public/html/home.html
+++ b/public/html/home.html
@@ -13,7 +13,7 @@
                 <ul>
                     <li><a href="/admin_home">Admin</a></li>
                     <li><a href="/about_us">About Us</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="/contact">Contact</a></li>
                 </ul>
             </nav>
             <img src="../assets/logo2.png"/>
