--- a/public/html/About_Us.html
+++ b/public/html/About_Us.html
@@ -11,8 +11,8 @@
         <nav>
             <ul>
                 <li><a href="/admin_home">Admin</a></li>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/contact">Contact</a></li>
                 
             </ul>
         </nav>
