--- a/public/html/add.html
+++ b/public/html/add.html
@@ -17,7 +17,7 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li class="logout"><a href="#">Log Out</a></li>
+                    <li class="logout"><a href="/logout">Log Out</a></li>
                 </ul>
             </nav>
         </div>
