--- a/public/html/login.html
+++ b/public/html/login.html
@@ -15,8 +15,8 @@
             <nav>    
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="/about_us">About Us</a></li>
+                    <li><a href="/contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
