--- a/public/html/home.html
+++ b/public/html/home.html
@@ -45,12 +45,12 @@
                     </p>
                 </section>
 
-                <!-- <div class = "search-bar" style="display: flex;"> -->
+                <div class = "search-bar" style="display: flex;">
                     <form action="" style="margin-top: 50px;">
                         <input type = "text" id = "search" name = "search" placeholder="Search a recipe..."> 
-                        <img src = "../assets/search.png" class = "searchImg">
+
                     </form>
-                <!-- </div> -->
+                </div>
                 
                 <div class="recipe-list"> <!-- Within this div is where recipes are listed; the ids within the elements will be used for JS, for editing or removing.-->
                     
