--- a/public/html/login.html
+++ b/public/html/login.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/login.css">
-    <title>razzka is beautifulest</title>
+    <title>Login</title>
 </head>
 <body>
     <div class="entire">    
